--- a/lesson3bonus/index.html
+++ b/lesson3bonus/index.html
@@ -12,6 +12,7 @@
   <header >
     <div class="header">
     <img src="img/logo.png" alt="">
+      jgfhgfhgfhfhgf
     </div>
   </header>
 </body>
