--- a/lesson3bonus/index.html
+++ b/lesson3bonus/index.html
@@ -9,11 +9,42 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header >
-    <div class="header">
-    <img src="img/logo.png" alt="">
-      jhgjhg
+  <div class="header">
+    <p class="slogan">Путешествия по Азии</p>
+    <div class="contacts_all">
+      <p class="contacts">Contact us</p>
+      <p class="phone">+12 34 5678910</p>
+      <p class="mail">info@asia-holidays.com</p>
     </div>
-  </header>
+  </div>
+  <div class="content">
+    <div class="india">
+      <p><img src="img/India.png" alt="India"></p>
+      <p>India</p>
+    </div>
+    <div class="nepal">
+      <p><img src="img/Nepal.png" alt="Nepal"></p>
+      <p>Nepal</p>
+    </div>
+    <div class="tibet">
+      <p><img src="img/Tibet.png" alt="Tibet"></p>
+      <p>Tibet</p>
+    </div>
+    <div class="bhutan">
+      <p><img src="img/Bhutan.png" alt="Bhutan"></p>
+      <p>Bhutan</p>
+    </div>
+    <div class="sri_lanka">
+      <p><img src="img/Sri_Lanka.png" alt="Sri Lanka"></p>
+      <p>Sri Lanka</p>
+    </div>
+    <div class="maldives">
+      <p><img src="img/Maldives.png" alt="Maldives"></p>
+      <p>Maldives</p>
+    </div>
+  </div>
+  <div class="footer">
+    Copyright (c) asia-holidays.com. 2010
+  </div>
 </body>
 </html>
