fix_lesson3_bonus

--- a/lesson3bonus/index.html
+++ b/lesson3bonus/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="content">
   <div class="header">
     <p class="slogan">Путешествия по Азии</p>
     <div class="contacts_all">
@@ -17,34 +18,35 @@
       <p class="mail">info@asia-holidays.com</p>
     </div>
   </div>
-  <div class="content">
+  <div class="countries">
     <div class="india">
-      <p><img src="img/India.png" alt="India"></p>
+      <img src="img/India.png" alt="India">
       <p>India</p>
     </div>
     <div class="nepal">
-      <p><img src="img/Nepal.png" alt="Nepal"></p>
+      <img src="img/Nepal.png" alt="Nepal">
       <p>Nepal</p>
     </div>
     <div class="tibet">
-      <p><img src="img/Tibet.png" alt="Tibet"></p>
+      <img src="img/Tibet.png" alt="Tibet">
       <p>Tibet</p>
     </div>
     <div class="bhutan">
-      <p><img src="img/Bhutan.png" alt="Bhutan"></p>
+      <img src="img/Bhutan.png" alt="Bhutan">
       <p>Bhutan</p>
     </div>
     <div class="sri_lanka">
-      <p><img src="img/Sri_Lanka.png" alt="Sri Lanka"></p>
+      <img src="img/Sri_Lanka.png" alt="Sri Lanka">
       <p>Sri Lanka</p>
     </div>
     <div class="maldives">
-      <p><img src="img/Maldives.png" alt="Maldives"></p>
+      <img src="img/Maldives.png" alt="Maldives">
       <p>Maldives</p>
     </div>
   </div>
   <div class="footer">
     Copyright (c) asia-holidays.com. 2010
   </div>
+</div>
 </body>
 </html>
