--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -8,38 +8,70 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="site clearfix">
+    <div class="site">
         <div class="header">
-            <p class="slogan">Путешествия по Азии</p>
+            <div class="slogan">Путешествия по Азии</div>
+            <div class="images">
+                <div class="contacts">
+                    <p>Наши контакты:</p>
+                    <p>+9-098-765-4321</p>
+                    <p>+9-0123-456-890</p>
+                    <p>info@asia-holidays.com</p>
+                </div>
+                <div class="countries">
+                    <ul>
+                        <li><img src="img/india.png" alt=""><p>Индия</p></li>
+                        <li><img src="img/nepal.png" alt=""><p>Непал</p></li>
+                        <li><img src="img/tibet.png" alt=""><p>Тибет</p></li>
+                        <li><img src="img/bhutan.png" alt=""><p>Бутан</p></li>
+                        <li><img src="img/sri_lanka.png" alt=""><p>Шри-Ланка</p></li>
+                        <li><img src="img/maldives.png" alt=""><p>Мальдивы</p></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="menu"></div>
         <div class="content clearfix">
             <img class="foto" src="img/foto.jpg" alt="photo">
-            <div class="info">
-                <p class="name">
-                    Информация
-                </p>
-                <p> Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
-                    Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар
-                    взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки
-                    успішно пережила п'ять століть, але й прижилася в електронному верстуванні,
-                    залишаючись по суті незмінною.
-                </p>
-            </div>
-            <div class="text">dfgdfgdfg</div>
-            <div class="news">
-                <p class="name">
-                    Новости
-                </p>
-                <p> Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
-                    Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар
-                    взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки
-                    успішно пережила п'ять століть, але й прижилася в електронному верстуванні,
-                    залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого
-                    сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum,
-                    і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker,
-                    які використовували різні версії Lorem Ipsum.
-                </p>
+                <ul class="menu">
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Путешествие <img class="triangle" src="img/triangle.png" alt=""></a>
+                        <ul class="submenu">
+                            <li><a href="#">Путешествие 1</a></li>
+                            <li><a href="#">Путешествие 2</a></li>
+                            <li><a href="#">Путешествие 3</a></li>
+                            <li><a href="#">Путешествие 4</a></li>
+                            <li><a href="#">Путешествие 5</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Услуги <img class="triangle" src="img/triangle.png" alt=""></a></li>
+                    <li><a href="#">Партнерам <img class="triangle" src="img/triangle.png" alt=""></a></li>
+                    <li><a href="#">Отзывы клиентов</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            <div class="columns">
+                <div class="info">
+                    <p class="name">
+                        Информация
+                    </p>
+                    <p> Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                    </p>
+                </div>
+                <div class="text"></div>
+                <div class="news">
+                    <p class="name">
+                        Новости
+                    </p>
+                    <p> Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+                    </p>
+                </div>
             </div>
         </div>
     </div>
