--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">Forum</a></li>
             <li><a href="#">Contato</a></li>
             <li><a href="#">Ajuda</a></li>
-            <li><a href="#"><img class="flag" src="img/flag.png" alt="">Minhas Ofertas</a></li>
+            <li><a href="#"><img class="line" src="img/line.jpg" alt=""><img class="flag" src="img/flag.png" alt="">Minhas Ofertas</a></li>
             <li>Ola! <a class="entrar" href="#">Entrar</a> ou <a class="entrar" href="#">Cadastre-se</a></li>
         </ul>
     </div>
@@ -26,22 +26,25 @@
         <div class="log_in">
             <img class="facebook" src="img/facebook.png" alt="">
             <div class="ou">
-                OU
+                <img class="line2" src="img/line2.jpg" alt="">
+                <img class="line2_1" src="img/line2.jpg" alt="">
+                <p>OU</p>
+
             </div>
             <form action="" method="get">
-                <div class="input">
+                <div>
                 <input type="text" name="First Name" placeholder="First Name" required>
                 </div>
-                <div class="input">
+                <div>
                     <input type="text" name="Last Name" placeholder="Last Name" required>
                 </div>
-                <div class="input">
+                <div>
                     <input type="email" name="Email Address" placeholder="Email Address" required>
                 </div>
-                <div class="input">
-                <input type="password" name="Password" placeholder="Choose Password" required>
+                <div>
+                    <input type="password" name="Password" placeholder="Choose Password" required>
                 </div>
-                <div class="input">
+                <div>
                     <input type="password" name="Password Confirm" placeholder="Password Confirm" required>
                 </div>
                 <div class="checkbox">
