--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">Forum</a></li>
             <li><a href="#">Contato</a></li>
             <li><a href="#">Ajuda</a></li>
-            <li><a href="#"><img class="line" src="img/line.jpg" alt=""><img class="flag" src="img/flag.png" alt="">Minhas Ofertas</a></li>
+            <li><img class="flag" src="img/flag.png" alt="">Minhas Ofertas</li>
             <li>Ola! <a class="entrar" href="#">Entrar</a> ou <a class="entrar" href="#">Cadastre-se</a></li>
         </ul>
     </div>
@@ -25,11 +25,11 @@
         </div>
         <div class="log_in">
             <img class="facebook" src="img/facebook.png" alt="">
+            <div class="line"></div>
             <div class="ou">
                 <img class="line2" src="img/line2.jpg" alt="">
                 <img class="line2_1" src="img/line2.jpg" alt="">
                 <p>OU</p>
-
             </div>
             <form action="" method="get">
                 <div>
@@ -56,8 +56,8 @@
                 </div>
             </form>
             <div class="footer">
-            By clicking the button above, you agree to the Terms of Service
-            Xiew our Privacy Policy.
+                By clicking the button above, you agree to the Terms of Service
+                Xiew our Privacy Policy.
             </div>
         </div>
     </div>
