--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">Forum</a></li>
             <li><a href="#">Contato</a></li>
             <li><a href="#">Ajuda</a></li>
-            <li><img class="flag" src="img/flag.png" alt="">Minhas Ofertas</li>
+            <li><div class="line"></div><img class="flag" src="img/flag.png" alt="">Minhas Ofertas</li>
             <li>Ola! <a class="entrar" href="#">Entrar</a> ou <a class="entrar" href="#">Cadastre-se</a></li>
         </ul>
     </div>
@@ -25,15 +25,14 @@
         </div>
         <div class="log_in">
             <img class="facebook" src="img/facebook.png" alt="">
-            <div class="line"></div>
             <div class="ou">
-                <img class="line2" src="img/line2.jpg" alt="">
-                <img class="line2_1" src="img/line2.jpg" alt="">
+                <div class="line_left"></div>
                 <p>OU</p>
+                <div class="line_right"></div>
             </div>
             <form action="" method="get">
                 <div>
-                <input type="text" name="First Name" placeholder="First Name" required>
+                    <input type="text" name="First Name" placeholder="First Name" required>
                 </div>
                 <div>
                     <input type="text" name="Last Name" placeholder="Last Name" required>
@@ -60,8 +59,6 @@
                 Xiew our Privacy Policy.
             </div>
         </div>
-    </div>
-    <div class="footer">
     </div>
 </div>
 </body>
