--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="content clearfix">
+        <div class="content">
             <img class="foto" src="img/foto.jpg" alt="photo">
                 <ul class="menu">
                     <li><a href="#">Главная</a></li>
