--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -24,7 +24,12 @@
             Cadastre-se
         </div>
         <div class="log_in">
-            <img class="facebook" src="img/facebook.png" alt="">
+            <div class="facebook">
+                <div class="f">
+                    <a href="#"><p class="one">f</p><p class="log">Log In</p> <p>with</p> <p class="face">Facebook</p>
+                        <img src="img/gal.png" alt=""> </a>
+                </div>
+            </div>
             <div class="ou">
                 <div class="line_left"></div>
                 <p>OU</p>
@@ -59,6 +64,8 @@
                 Xiew our Privacy Policy.
             </div>
         </div>
+    </div>
+    <div class="footer">
     </div>
 </div>
 </body>
