--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -36,15 +36,75 @@
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">Путешествие <img class="triangle" src="img/triangle.png" alt=""></a>
                         <ul class="submenu">
-                            <li><a href="#">Путешествие 1</a></li>
-                            <li><a href="#">Путешествие 2</a></li>
-                            <li><a href="#">Путешествие 3</a></li>
-                            <li><a href="#">Путешествие 4</a></li>
+                            <li><a href="#">Путешествие 1</a>
+                                <ul class="submenu2">
+                                    <li><a href="#">Путешествие 1</a></li>
+                                    <li><a href="#">Путешествие 2</a></li>
+                                    <li><a href="#">Путешествие 3</a></li>
+                                    <li><a href="#">Путешествие 4</a></li>
+                                    <li><a href="#">Путешествие 5</a></li>
+                                </ul></li>
+                            <li><a href="#">Путешествие 2</a>
+                                <ul class="submenu2">
+                                    <li><a href="#">Путешествие 1</a></li>
+                                    <li><a href="#">Путешествие 2</a></li>
+                                    <li><a href="#">Путешествие 3</a></li>
+                                    <li><a href="#">Путешествие 4</a></li>
+                                    <li><a href="#">Путешествие 5</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Путешествие 3</a>
+                                <ul class="submenu2">
+                                    <li><a href="#">Путешествие 1</a></li>
+                                    <li><a href="#">Путешествие 2</a></li>
+                                    <li><a href="#">Путешествие 3</a></li>
+                                    <li><a href="#">Путешествие 4</a></li>
+                                    <li><a href="#">Путешествие 5</a></li>
+                                </ul></li>
+                            <li><a href="#">Путешествие 4</a>
+                                <ul class="submenu2">
+                                    <li><a href="#">Путешествие 1</a></li>
+                                    <li><a href="#">Путешествие 2</a></li>
+                                    <li><a href="#">Путешествие 3</a></li>
+                                    <li><a href="#">Путешествие 4</a></li>
+                                    <li><a href="#">Путешествие 5</a></li>
+                                </ul></li>
                             <li><a href="#">Путешествие 5</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Услуги <img class="triangle" src="img/triangle.png" alt=""></a></li>
-                    <li><a href="#">Партнерам <img class="triangle" src="img/triangle.png" alt=""></a></li>
+                    <li><a href="#">Услуги <img class="triangle" src="img/triangle.png" alt=""></a>
+                        <ul class="submenu">
+                            <li><a href="#">Услуги 1</a></li>
+                            <li><a href="#">Услуги 2</a>
+                                <ul class="submenu2">
+                                    <li><a href="#">Услуги 1</a></li>
+                                    <li><a href="#">Услуги 2</a></li>
+                                    <li><a href="#">Услуги 3</a></li>
+                                    <li><a href="#">Услуги 4</a></li>
+                                    <li><a href="#">Услуги 5</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Услуги 3</a></li>
+                            <li><a href="#">Услуги 4</a></li>
+                            <li><a href="#">Услуги 5</a></li>
+                        </ul></li>
+                    <li><a href="#">Партнерам <img class="triangle" src="img/triangle.png" alt=""></a>
+                        <ul class="submenu">
+                            <li><a href="#">Партнерам 1</a></li>
+                            <li><a href="#">Партнерам 2</a>
+                                <ul class="submenu2">
+                                    <li><a href="#">Партнерам 1</a></li>
+                                    <li><a href="#">Партнерам 2</a></li>
+                                    <li><a href="#">Партнерам 3</a></li>
+                                    <li><a href="#">Партнерам 4</a></li>
+                                    <li><a href="#">Партнерам 5</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Партнерам 3</a></li>
+                            <li><a href="#">Партнерам 4</a></li>
+                            <li><a href="#">Партнерам 5</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Отзывы клиентов</a></li>
                     <li><a href="#">О нас</a></li>
                     <li><a href="#">Контакты</a></li>
