--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -10,23 +10,28 @@
 <div class="wrapper">
     <header>
         <div class="phone box">
-            <div class="phone_img floating_box">
+            <div class="phone_img float">
                 <img src="img/phone.png" alt="">
             </div>
-            <p class="phone floating_box">
+            <p class="phone float">
                 (044)123-45-67 (044)567-89-10
             </p>
-            <div class="login floating_box">
+            <div class="avt float">
                 <img class="man" src="img/man.png" alt="">
-                <div class="floating_box">
+                <div class="float">
                     <form action="" method="get">
                         <input type="text" placeholder="логин">
                         <input type="password" placeholder="пароль">
                         <input type="submit" value="вход">
                     </form>
                 </div>
-                <p class="reg floating_box">регистрация</p>
-                <p class="forget_password floating_box">забыли пароль?</p>
+                <p class="reg float">регистрация</p>
+                <p class="forget_password float">забыли пароль?</p>
+            </div>
+            <div class="navigation float">
+                <img src="img/home.png" alt="">
+                <img class="map" src="img/map.png" alt="">
+                <img src="img/letter.png" alt="">
             </div>
         </div>
     </header>
