--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Zazor</title>
+    <title>Dz6</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -34,10 +34,182 @@
                 <img src="img/letter.png" alt="">
             </div>
         </div>
+        <div>
+            <img src="img/header.jpg" alt="">
+        </div>
+        <div class="menu">
+            <ul class="float">
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Оплата</a></li>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Статьи</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <div class="basket float">
+                <p class="float"><a href="#"><img class="basket_img" src="img/basket.png" alt=""></a></p>
+                <p class="goods float">товаров:</p><p class="quantity float">0</p>
+                <p class="amount float">на сумму:</p><p class="price float">0,00 грн.</p>
+            </div>
+        </div>
     </header>
-    <div class="sidebar">
+    <div class="sidebar_left">
+        <div class="head">
+            <div class="circle float">
+                <img class="list" src="img/list.png" alt="">
+            </div>
+            <div class="titel float">Каталог продукции:</div>
+        </div>
+        <div class="list_titel_bar">
+            <div class="border float"></div>
+            <p class="list_titel float">Шины</p>
+        </div>
+            <ul>
+                <li><a href="#">Наименование 1</a></li>
+                <li><a href="#">Наименование 2</a></li>
+                <li><a href="#">Наименование 3</a></li>
+                <li><a href="#">Наименование 4</a></li>
+            </ul>
+        <div class="list_titel_bar">
+            <div class="border float"></div>
+            <p class="list_titel float">Диски</p>
+        </div>
+            <ul>
+                <li><a href="#">Наименование 1</a></li>
+                <li><a href="#">Наименование 2</a></li>
+                <li><a href="#">Наименование 3</a></li>
+                <li><a href="#">Наименование 4</a></li>
+            </ul>
+        <div class="list_titel_bar">
+            <div class="border float"></div>
+            <p class="list_titel float">Болты</p>
+        </div>
+            <ul>
+                <li><a href="#">Наименование 1</a></li>
+                <li><a href="#">Наименование 2</a></li>
+                <li><a href="#">Наименование 3</a></li>
+                <li><a href="#">Наименование 4</a></li>
+            </ul>
+    </div>
+    <div class="sidebar_right">
+        <div class="head">
+            <div class="circle float">
+                <img class="list" src="img/list.png" alt="">
+            </div>
+            <div class="titel float">Бренды:</div>
+        </div>
+        <div class="form">
+            <form action="#" method="get">
+                <div class="list_titel_bar">
+                    <div class="border float"></div>
+                    <p class="list_titel float">Шины</p>
+                </div>
+                <p class="brend">
+                    <input type="checkbox" name="tires" id="brend1">
+                        <label for="brend1">Бренд 1</label>
+                </p>
+                <p class="brend">
+                    <input type="checkbox" name="tires" id="brend2">
+                        <label for="brend2">Бренд 2</label>
+                </p>
+                <p class="brend bottom">
+                    <input type="checkbox" name="tires" id="brend3">
+                        <label for="brend3">Бренд 3</label>
+                </p>
+                <div class="list_titel_bar">
+                    <div class="border float"></div>
+                    <p class="list_titel float">Диски</p>
+                </div>
+                <p class="brend">
+                    <input type="checkbox" name="disks" id="brend1">
+                    <label for="brend1">Бренд 1</label>
+                </p>
+                <p class="brend">
+                    <input type="checkbox" name="disks" id="brend2">
+                    <label for="brend2">Бренд 2</label>
+                </p>
+                <p class="brend">
+                    <input type="checkbox" name="disks" id="brend3">
+                    <label for="brend3">Бренд 3</label>
+                </p>
+                <input type="submit" value="ВЫБРАТЬ">
+            </form>
+        </div>
     </div>
     <div class="content">
+        <main>
+            <div class="float">
+                <p class="name">Goodyear</p>
+                <p class="spec">Ultra Grip Extreme</p>
+                <div class="tires">
+                    <img src="img/goodyear.jpg" alt="tire">
+                </div>
+                <p class="price_list">90.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Nokian</p>
+                <p class="spec">Hakkapeliitta R</p>
+                <div class="tires nokian">
+                    <img src="img/nokian.jpg" alt="tire">
+                </div>
+                <p class="price_list">115.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Hankook</p>
+                <p class="spec">K 708 155/65 R14 </p>
+                <div class="tires">
+                    <img src="img/hankook.jpg" alt="tire">
+                </div>
+                <p class="price_list">393.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Goodyear</p>
+                <p class="spec">Ultra Grip Extreme</p>
+                <div class="tires">
+                    <img src="img/goodyear.jpg" alt="tire">
+                </div>
+                <p class="price_list">90.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Nokian</p>
+                <p class="spec">Hakkapeliitta R</p>
+                <div class="tires nokian">
+                    <img src="img/nokian.jpg" alt="tire">
+                </div>
+                <p class="price_list">115.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Hankook</p>
+                <p class="spec">K 708 155/65 R14 </p>
+                <div class="tires">
+                    <img src="img/hankook.jpg" alt="tire">
+                </div>
+                <p class="price_list">393.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Goodyear</p>
+                <p class="spec">Ultra Grip Extreme</p>
+                <div class="tires">
+                    <img src="img/goodyear.jpg" alt="tire">
+                </div>
+                <p class="price_list">90.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Nokian</p>
+                <p class="spec">Hakkapeliitta R</p>
+                <div class="tires nokian">
+                    <img src="img/nokian.jpg" alt="tire">
+                </div>
+                <p class="price_list">115.00 грн.</p>
+            </div>
+            <div class="float">
+                <p class="name">Hankook</p>
+                <p class="spec">K 708 155/65 R14 </p>
+                <div class="tires">
+                    <img src="img/hankook.jpg" alt="tire">
+                </div>
+                <p class="price_list">393.00 грн.</p>
+            </div>
+        </main>
         <div class="brand_logo">
             <img src="img/brand_logo.png" alt="">
         </div>
