--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <div class="phone box">
+        <div class="phone_box">
             <div class="phone_img float">
                 <img src="img/phone.png" alt="">
             </div>
@@ -55,7 +55,7 @@
     <div class="sidebar_left">
         <div class="head">
             <div class="circle float">
-                <img class="list" src="img/list.png" alt="">
+                <img class="list_left" src="img/list.png" alt="">
             </div>
             <div class="titel float">Каталог продукции:</div>
         </div>
