--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -64,7 +64,7 @@
             <p class="list_titel float">Шины</p>
         </div>
             <ul>
-                <li><a href="#">Наименование 1</a></li>
+                <li><div class="marker float"></div><a href="#">Наименование 1</a></li>
                 <li><a href="#">Наименование 2</a></li>
                 <li><a href="#">Наименование 3</a></li>
                 <li><a href="#">Наименование 4</a></li>
@@ -120,16 +120,16 @@
                     <p class="list_titel float">Диски</p>
                 </div>
                 <p class="brend">
-                    <input type="checkbox" name="disks" id="brend1">
-                    <label for="brend1">Бренд 1</label>
+                    <input type="checkbox" name="disks" id="brend2_1">
+                    <label for="brend2_1">Бренд 1</label>
                 </p>
                 <p class="brend">
-                    <input type="checkbox" name="disks" id="brend2">
-                    <label for="brend2">Бренд 2</label>
+                    <input type="checkbox" name="disks" id="brend2_2">
+                    <label for="brend2_2">Бренд 2</label>
                 </p>
                 <p class="brend">
-                    <input type="checkbox" name="disks" id="brend3">
-                    <label for="brend3">Бренд 3</label>
+                    <input type="checkbox" name="disks" id="brend3_3">
+                    <label for="brend3_3">Бренд 3</label>
                 </p>
                 <input type="submit" value="ВЫБРАТЬ">
             </form>
