--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -10,25 +10,25 @@
 <div class="wrapper">
     <header>
         <div class="phone_box">
-            <div class="phone_img float">
+            <div class="phone_img inline">
                 <img src="img/phone.png" alt="">
             </div>
-            <p class="phone float">
+            <p class="phone inline">
                 (044)123-45-67 (044)567-89-10
             </p>
-            <div class="avt float">
+            <div class="avt inline">
                 <img class="man" src="img/man.png" alt="">
-                <div class="float">
+                <div class="inline">
                     <form action="" method="get">
                         <input type="text" placeholder="логин">
                         <input type="password" placeholder="пароль">
                         <input type="submit" value="вход">
                     </form>
                 </div>
-                <p class="reg float">регистрация</p>
-                <p class="forget_password float">забыли пароль?</p>
+                <p class="reg inline">регистрация</p>
+                <p class="forget_password inline">забыли пароль?</p>
             </div>
-            <div class="navigation float">
+            <div class="navigation inline">
                 <img src="img/home.png" alt="">
                 <img class="map" src="img/map.png" alt="">
                 <img src="img/letter.png" alt="">
@@ -38,40 +38,29 @@
             <img src="img/header.jpg" alt="">
         </div>
         <div class="menu">
-            <ul class="float">
+            <ul class="inline">
                 <li><a href="#">О компании</a></li>
                 <li><a href="#">Оплата</a></li>
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Статьи</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
-            <div class="basket float">
-                <p class="float"><a href="#"><img class="basket_img" src="img/basket.png" alt=""></a></p>
-                <p class="goods float">товаров:</p><p class="quantity float">0</p>
-                <p class="amount float">на сумму:</p><p class="price float">0,00 грн.</p>
+            <div class="basket inline">
+                <p class="inline"><a href="#"><img class="basket_img" src="img/basket.png" alt=""></a></p>
+                <p class="goods inline">товаров:</p><p class="quantity inline">0</p>
+                <p class="amount inline">на сумму:</p><p class="price inline">0,00 грн.</p>
             </div>
         </div>
     </header>
     <div class="sidebar_left">
         <div class="head">
-            <div class="circle float">
+            <div class="circle inline">
                 <img class="list_left" src="img/list.png" alt="">
             </div>
-            <div class="titel float">Каталог продукции:</div>
+            <div class="titel inline">Каталог продукции:</div>
         </div>
         <div class="list_titel_bar">
-            <div class="border float"></div>
-            <p class="list_titel float">Шины</p>
-        </div>
-            <ul>
-                <li><div class="marker float"></div><a href="#">Наименование 1</a></li>
-                <li><a href="#">Наименование 2</a></li>
-                <li><a href="#">Наименование 3</a></li>
-                <li><a href="#">Наименование 4</a></li>
-            </ul>
-        <div class="list_titel_bar">
-            <div class="border float"></div>
-            <p class="list_titel float">Диски</p>
+            <p class="list_titel inline">Шины</p>
         </div>
             <ul>
                 <li><a href="#">Наименование 1</a></li>
@@ -80,8 +69,16 @@
                 <li><a href="#">Наименование 4</a></li>
             </ul>
         <div class="list_titel_bar">
-            <div class="border float"></div>
-            <p class="list_titel float">Болты</p>
+            <p class="list_titel inline">Диски</p>
+        </div>
+            <ul>
+                <li><a href="#">Наименование 1</a></li>
+                <li><a href="#">Наименование 2</a></li>
+                <li><a href="#">Наименование 3</a></li>
+                <li><a href="#">Наименование 4</a></li>
+            </ul>
+        <div class="list_titel_bar">
+            <p class="list_titel inline">Болты</p>
         </div>
             <ul>
                 <li><a href="#">Наименование 1</a></li>
@@ -92,16 +89,15 @@
     </div>
     <div class="sidebar_right">
         <div class="head">
-            <div class="circle float">
+            <div class="circle inline">
                 <img class="list" src="img/list.png" alt="">
             </div>
-            <div class="titel float">Бренды:</div>
+            <div class="titel inline">Бренды:</div>
         </div>
         <div class="form">
             <form action="#" method="get">
                 <div class="list_titel_bar">
-                    <div class="border float"></div>
-                    <p class="list_titel float">Шины</p>
+                    <p class="list_titel inline">Шины</p>
                 </div>
                 <p class="brend">
                     <input type="checkbox" name="tires" id="brend1">
@@ -116,8 +112,7 @@
                         <label for="brend3">Бренд 3</label>
                 </p>
                 <div class="list_titel_bar">
-                    <div class="border float"></div>
-                    <p class="list_titel float">Диски</p>
+                    <p class="list_titel inline">Диски</p>
                 </div>
                 <p class="brend">
                     <input type="checkbox" name="disks" id="brend2_1">
@@ -137,7 +132,7 @@
     </div>
     <div class="content">
         <main>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Goodyear</p>
                 <p class="spec">Ultra Grip Extreme</p>
                 <div class="tires">
@@ -145,7 +140,7 @@
                 </div>
                 <p class="price_list">90.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Nokian</p>
                 <p class="spec">Hakkapeliitta R</p>
                 <div class="tires nokian">
@@ -153,7 +148,7 @@
                 </div>
                 <p class="price_list">115.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Hankook</p>
                 <p class="spec">K 708 155/65 R14 </p>
                 <div class="tires">
@@ -161,7 +156,7 @@
                 </div>
                 <p class="price_list">393.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Goodyear</p>
                 <p class="spec">Ultra Grip Extreme</p>
                 <div class="tires">
@@ -169,7 +164,7 @@
                 </div>
                 <p class="price_list">90.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Nokian</p>
                 <p class="spec">Hakkapeliitta R</p>
                 <div class="tires nokian">
@@ -177,7 +172,7 @@
                 </div>
                 <p class="price_list">115.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Hankook</p>
                 <p class="spec">K 708 155/65 R14 </p>
                 <div class="tires">
@@ -185,7 +180,7 @@
                 </div>
                 <p class="price_list">393.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Goodyear</p>
                 <p class="spec">Ultra Grip Extreme</p>
                 <div class="tires">
@@ -193,7 +188,7 @@
                 </div>
                 <p class="price_list">90.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Nokian</p>
                 <p class="spec">Hakkapeliitta R</p>
                 <div class="tires nokian">
@@ -201,7 +196,7 @@
                 </div>
                 <p class="price_list">115.00 грн.</p>
             </div>
-            <div class="float">
+            <div class="inline">
                 <p class="name">Hankook</p>
                 <p class="spec">K 708 155/65 R14 </p>
                 <div class="tires">
@@ -224,6 +219,5 @@
         <p class="copy">Создание сайта &copy Global Vision</p>
     </footer>
 </div>
-
 </body>
 </html>
