--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -19,7 +19,7 @@
             <div class="avt inline">
                 <img class="man" src="img/man.png" alt="">
                 <div class="inline">
-                    <form action="" method="get">
+                    <form action="#" method="get">
                         <input type="text" placeholder="логин">
                         <input type="password" placeholder="пароль">
                         <input type="submit" value="вход">
@@ -52,12 +52,230 @@
             </div>
         </div>
     </header>
-    <div class="sidebar_left">
+    <section class="search_boxes search_by_car inline">
+        <h4 class="search_by_car_titel">Поиск по автомобилю</h4>
+            <form action="#" method="get">
+                <div class="drop_list_group inline">Диски:</div>
+                <div>
+                    <div class="drop_list mark inline">
+                        <p class="inline">Марка</p>
+                        <p class="line2 inline">авто:</p>
+                    </div>
+                    <select class="inline" name="Марка авто" id="mark_1">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+                    </div>
+                <div>
+                    <div class="drop_list model inline">
+                        <p>Модель</p>
+                        <p class="line2">автомобиля:</p>
+                    </div>
+                    <select class="inline" name="Модель автомобиля" id="model_1">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+                </div>
+                <div>
+                    <div class="drop_list model inline">
+                        <p>Год выпуска</p>
+                        <p class="line2">автомобиля:</p>
+                    </div>
+                    <select class="year inline" name="Год выпуска автомобиля" id="year_1">
+                        <option value="2001">2001</option>
+                        <option value="2002">2002</option>
+                        <option value="2003">2003</option>
+                        <option value="2004">2004</option>
+                    </select>
+                </div>
+                <div>
+                    <div class="drop_list complectation inline">
+                        <p>Комплектация:</p>
+                    </div>
+                    <select class="inline" name="Комплектация" id="complectation_1">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+                </div>
+                <div class="select_disks">
+                    <div class="drop_list_group2 inline">Шины:</div>
+                    <div>
+                        <div class="drop_list mark inline">
+                            <p class="inline">Марка</p>
+                            <p class="line2 inline">авто:</p>
+                        </div>
+                        <select class="inline" name="Марка авто" id="mark">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </div>
+                    <div>
+                        <div class="drop_list model inline">
+                            <p>Модель</p>
+                            <p class="line2">автомобиля:</p>
+                        </div>
+                        <select class="inline" name="Модель автомобиля" id="model">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </div>
+                    <div>
+                        <div class="drop_list model inline">
+                            <p>Год выпуска</p>
+                            <p class="line2">автомобиля:</p>
+                        </div>
+                        <select class="year inline" name="Год выпуска автомобиля" id="year">
+                            <option value="2001">2001</option>
+                            <option value="2002">2002</option>
+                            <option value="2003">2003</option>
+                            <option value="2004">2004</option>
+                        </select>
+                    </div>
+                    <div>
+                        <div class="drop_list complectation inline">
+                            <p>Комплектация:</p>
+                        </div>
+                        <select class="inline" name="Комплектация" id="complectation">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                     </div>
+                </div>
+                <input class="search_button search_by_car_button" type="submit" value="поиск...">
+            </form>
+    </section>
+    <section class="search_boxes tires_search inline">
+        <h4 class="tires_search_titel">Поиск шин</h4>
+        <form action="#" method="get">
+            <p class="drop_list inline">Размер:</p>
+            <select class="size inline" name="Размер" id="size">
+                <option value="145">145</option>
+                <option value="150">150</option>
+                <option value="155">155</option>
+                <option value="160">160</option>
+            </select>
+            <p class="drop_list slash inline">/</p>
+            <select class="size inline" name="Размер_2" id="size_2">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+            </select>
+            <p class="drop_list radius inline">R</p>
+            <select class="radius_drop_list inline" name="R" id="R">
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+            </select>
+            <div>
+                <p class="drop_list season inline">Сезон:</p>
+                <div class="inline">
+                    <p class="brend">
+                        <input type="checkbox" name="tires" id="summer">
+                        <label for="summer">лето</label>
+                    </p>
+                    <p class="brend">
+                        <input type="checkbox" name="tires" id="winter">
+                        <label for="winter">зима</label>
+                    </p>
+                    <p class="brend bottom">
+                        <input type="checkbox" name="tires" id="all">
+                        <label for="all">всесез</label>
+                    </p>
+                </div>
+            </div>
+            <input class="search_button tires_search_buuton" type="submit" value="поиск...">
+        </form>
+    </section>
+    <section class="search_boxes disks_search inline">
+        <form action="#" method="get">
+            <div class="disks_search_left_side inline">
+                <h4 class="disks_search_titel">Поиск дисков</h4>
+                    <div class="drop_list disk_diameter inline">
+                        <p class="inline">Диаметр</p>
+                        <p class="line2 inline">диска:</p>
+                    </div>
+                    <select class="select_box_size inline" name="Диаметр диска" id="disk_diameter">
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                    </select>
+                <div>
+                    <div class="drop_list inline">
+                        <p>Количество</p>
+                        <p class="line2">крепежных</p>
+                        <p class="line2">отверстий:</p>
+                    </div>
+                    <select class="fasten inline" name="Крепежные отверстия" id="fasten">
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                    </select>
+                    </div>
+                <div>
+                    <div class="drop_list inline">
+                        <p>Диаметр</p>
+                        <p class="line2">расположения</p>
+                        <p class="line2">крепежных</p>
+                        <p class="line2">отверстий:</p>
+                    </div>
+                    <select class="select_box_size diameter inline" name="Диаметр расположения" id="diameter">
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                    </select>
+                </div>
+            </div>
+            <div class="disks_search_right_side inline">
+                <div class="drop_list">
+                    <p>ДЦО</p>
+                    <p class="line2">(диаметр</p>
+                    <p class="line2">центрального</p>
+                    <p class="line2">отверстия:)</p>
+                </div>
+                <select class="select_box_size dco" name="ДЦО" id="DCO">
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                </select>
+                <div class="drop_list">
+                    <p>ET</p>
+                    <p class="line2">(вылет</p>
+                    <p class="line2">диска:)</p>
+                </div>
+                <select class="select_box_size" name="ET" id="ET">
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                </select>
+            </div>
+                <input class="search_button disks_search_button" type="submit" value="поиск...">
+        </form>
+    </section>
+    <aside class="sidebar_left">
         <div class="head">
             <div class="circle inline">
                 <img class="list_left" src="img/list.png" alt="">
             </div>
-            <div class="titel inline">Каталог продукции:</div>
+            <h3 class="titel inline">Каталог продукции:</h3>
         </div>
         <div class="list_titel_bar">
             <p class="list_titel inline">Шины</p>
@@ -86,13 +304,13 @@
                 <li><a href="#">Наименование 3</a></li>
                 <li><a href="#">Наименование 4</a></li>
             </ul>
-    </div>
-    <div class="sidebar_right">
+    </aside>
+    <aside class="sidebar_right">
         <div class="head">
             <div class="circle inline">
                 <img class="list" src="img/list.png" alt="">
             </div>
-            <div class="titel inline">Бренды:</div>
+            <h3 class="titel inline">Бренды:</h3>
         </div>
         <div class="form">
             <form action="#" method="get">
@@ -100,36 +318,36 @@
                     <p class="list_titel inline">Шины</p>
                 </div>
                 <p class="brend">
-                    <input type="checkbox" name="tires" id="brend1">
-                        <label for="brend1">Бренд 1</label>
+                    <input type="checkbox" name="tires" id="brend_1">
+                        <label for="brend_1">Бренд 1</label>
                 </p>
                 <p class="brend">
-                    <input type="checkbox" name="tires" id="brend2">
-                        <label for="brend2">Бренд 2</label>
+                    <input type="checkbox" name="tires" id="brend_2">
+                        <label for="brend_2">Бренд 2</label>
                 </p>
                 <p class="brend bottom">
-                    <input type="checkbox" name="tires" id="brend3">
-                        <label for="brend3">Бренд 3</label>
+                    <input type="checkbox" name="tires" id="brend_3">
+                        <label for="brend_3">Бренд 3</label>
                 </p>
                 <div class="list_titel_bar">
                     <p class="list_titel inline">Диски</p>
                 </div>
                 <p class="brend">
-                    <input type="checkbox" name="disks" id="brend2_1">
-                    <label for="brend2_1">Бренд 1</label>
+                    <input type="checkbox" name="disks" id="brend_2_1">
+                    <label for="brend_2_1">Бренд 1</label>
                 </p>
                 <p class="brend">
-                    <input type="checkbox" name="disks" id="brend2_2">
-                    <label for="brend2_2">Бренд 2</label>
+                    <input type="checkbox" name="disks" id="brend_2_2">
+                    <label for="brend_2_2">Бренд 2</label>
                 </p>
                 <p class="brend">
-                    <input type="checkbox" name="disks" id="brend3_3">
-                    <label for="brend3_3">Бренд 3</label>
+                    <input type="checkbox" name="disks" id="brend_3_3">
+                    <label for="brend_3_3">Бренд 3</label>
                 </p>
-                <input type="submit" value="ВЫБРАТЬ">
+                <input class="brend_submition" type="submit" value="ВЫБРАТЬ">
             </form>
         </div>
-    </div>
+    </aside>
     <div class="content">
         <main>
             <div class="inline">
@@ -216,7 +434,7 @@
             <li><a href="#">Статьи</a></li>
             <li><a class="contacts" href="#">Контакты</a></li>
         </ul>
-        <p class="copy">Создание сайта &copy Global Vision</p>
+        <p class="copy">Создание сайта &copy; Global Vision</p>
     </footer>
 </div>
 </body>
